Fixed spacing

--- a/src/components/JackCut.css
+++ b/src/components/JackCut.css
@@ -7,5 +7,4 @@
     background-color: red;
     color: white;
     top: 18%;
-    left: 78%;
 }
